--- a/S2I-Base-Image/yaml_templates/amq_image_template.yaml
+++ b/S2I-Base-Image/yaml_templates/amq_image_template.yaml
@@ -42,7 +42,7 @@ objects:
     source:
       contextDir: S2I-Base-Image
       git:
-        uri: https://github.com/jeremyary/amq7-image.git
+        uri: https://github.com/RHSyseng/amq7.git
       images: []
       secrets: []
       type: Git
